# WAM-IPE

./: .gitignore  CompsetRun_New  ISSUE_TEMPLATE  OldCompsetRun  PULL_REQUEST_TEMPLATE  README.md  RT_cold_start_compsetrun  clean.sh  georges_run_wam_ipe.sh  standaloneGSM.appBuilder  this_lot  wam-ipe.appBuilder
DATAIPE/: Makefile  dataipe.F90  dataipe.mk
DATAIPE-INSTALL/: dataipe.mk
DATAWAM/: Makefile  datawam.F90  datawam.mk
DATAWAM-INSTALL/: datawam.mk
IPE/: Makefile  README.md  SMSnamelist.IN  VERSION  clean.sh  clean_up.sh  ipe.mk  ipeCap.F90  module_finalize_IPE.F90  module_myIPE_Init.F90  module_sub_myIPE_Init.F90  module_update_IPE.F90
IPELIB/: Makefile  aclocal.m4  build_ipe_fromscratch.sh  clean_up.sh  configure.ac  scripts
IPELIB/src/: CMakeLists.txt  Convert_LegacyPlasma_to_NetCDF.F90  IPE_Electrodynamics_Class.F90  IPE_Grid_Class.F90  IPE_Model_Class.F90  IPE_Neutrals_Class.F90  IPE_Plasma_Class.F90  IPE_Time_Class.F90  Makefile  Makefile.am  Makefile.common  Makefile.in  clean.sh  modcmd
IPELIB/src/cmake/Modules/: FindNETCDF.cmake
IPELIB/src/driver/: Makefile  SMS_Module_Lookup.txt  driver_ipe.f90
IPELIB/src/dummygptl/: Makefile
IPELIB/src/eldyn/: Makefile  SMS_Module_Lookup.txt  efield_ipe.f  get_efield90km.f  module_DerivPotential.f  module_GlobalElPotential.f  module_ReadCoef.f  module_adj_S_a.f  module_bnd_sinus.f  module_cal_monthday.f  module_constants.f  module_efield_init.f  module_efield_mid.f  module_eldyn.f  module_ff.f  module_get_efield.f  module_highlat_adjust.f  module_highlat_getbnd.f  module_index_quiet.f  module_init_eldyn.f  module_init_eldyn.f90  module_interp_poten.f  module_pnm.f  module_pot_latsmo.f  module_pot_latsmo2.f  module_pot_lonsmo.f  module_prep_fk.f  module_prep_pnm.f  module_prep_weimer.f  module_read_acoef.f  module_set_fkflfs.f  module_sub_eldyn.f  module_sunloc.f  supim_exb.f
IPELIB/src/empirical_efield/: Makefile.in  efield_ipe.f
IPELIB/src/flip/: CTIPE-int.f  FLIPWIND.f  MINORA.f  Makefile  Makefile.am  Makefile.in  RSJACA.f  RSLPSD.f  RSPE2B.f  RSTEMC_EXB.f  module_tirosdata_ipe.f  sub_ionize_ipe.f  sub_tiros_init.f  sub_tiros_init_ipe.f  sub_tiros_ionize.f  sub_tiros_ionize_ipe.f
IPELIB/src/grid/: grid_plasma.f90
IPELIB/src/integration_testing/: CompareModelDataInstances.f90  Makefile  ModelDataInstances_Class.f90  cmdi.mak  module_MDI.f90
IPELIB/src/integration_testing/example/: Makefile  ModelDataInstances_Driver.f90
IPELIB/src/main/: Makefile  SMS_Module_Lookup.txt  allocate_arrays.f90  get_flip_grid.f90  ipe_f107_kp_mod.f90  module_close_files.f90  module_field_line_grid.f90  module_init_plasma_grid.f90  module_input_parameters.f90  module_io.f90  module_open_file.f90  module_open_output_files.f90  module_read_plasma_grid_global.f90  output_plasma_grid.f90  stop.f90  wam_f107_kp_mod.f90
IPELIB/src/neutral/: Makefile  Makefile-new  SMS_Module_Lookup.txt  get_msis_hydrogen_and_helium.f90  hwm93.f90  module_neutral.f90  module_neutral.f90-old  thermosphere_1d_v2.f90
IPELIB/src/plasma/: Makefile  SMS_Module_Lookup.txt  flux_tube_solver.f90  get_sza.f90  interpolate_flux_tube.f90  io_plasma_bin.f90  module_Qinterpolation.f90  module_deplete_flux_tube.f90  module_find_neighbor_grid.f90  module_find_neighbor_grid_R.f90  module_find_neighbor_grid_th.f90  module_perpendicular_transport.f90  module_plasma.f90  module_stepback.f90  module_stepback_mag_R.f90  module_stepback_mag_th.f90  module_sub_plasma.f90
IPELIB/src/plot/: Compare_raw_IPE.sh  IPEToHeightGrid.f90  IPEToHeightGrid_mpi.f90  IPE_Comparisons.f90  IPE_Run_Comparisons_mpi.f90  comp.mak  i2hg.mak  i2hg_mpi.mak  interface_to_fixed_height_single_file.f90  run_ipe_postprocessor.sh
IPELIB/src/test/: Convert_LegacyGrid_to_NetCDF.F90
IPE_new/: Makefile.am  Makefile.in  README.md  aclocal.m4  build_ipe_fromscratch.sh  configure  configure.ac
IPE_new/scripts/: download_ipe-data.py  ipe.pbs
IPE_new/src/: Convert_LegacyGrid_to_NetCDF.F90  Eldyn_Converter.F90  IPE_Common_Routines.F90  IPE_Constants_Dictionary.F90  IPE_Driver.F90  IPE_Electrodynamics_Class.F90  IPE_Forcing_Class.F90  IPE_Grid_Class.F90  IPE_Model_Class.F90  IPE_Model_Parameters_Class.F90  IPE_Neutrals_Class.F90  IPE_Plasma_Class.F90  IPE_Time_Class.F90  Makefile  Makefile.am  Makefile.in
IPE_new/src/config/: ipe.runtime.config
IPE_new/src/config/theia/: ipe.build.config  ipe_debug.build.config  paths.config  wam-ipe.build.config  wam-ipe_debug.build.config
IPE_new/src/empirical_efield/: Makefile.am  Makefile.in
IPE_new/src/flip/: CMINOR.f  CTIPE-int.f  ELECXS.f  INIT-PROFILES.f  KEMPRN.f  MINORA.f  Makefile  Makefile.am  Makefile.in  Neut_Heating.f  RSDENA_EXB.f  RSJACA.f  RSLPSD.f  RSLPST.f  RSPE2B.f  RSPRIM.f  RSTEMC_EXB.f  Rates.f
IPE_new/src/msise00/: Makefile  Makefile.am  Makefile.in  hwm14.f90
IPE_new/src/test/: Convert_LegacyGrid_to_NetCDF.F90
NEMS/: NEMSAppBuilder  oldtests
RT_WAM/: README_SOLAR_IMF  gwp_in  ion_in  iondata_tjr.nc  snoe_eof.nc  solar_in  tiros_tjr.nc  wam_control_in  wam_nems_feuv_2012_366d_by_24hr.nc  wam_rm3_globcomp.nc  wasolar_dan_20161019.nc
compsets/: all.input  gsm.input  nemscommon.input  platforms.input  wam-ipe.input
conf/: configure.nems.Gaea.intel  configure.nems.Gaea.pgi  configure.nems.Jet.ifort  configure.nems.Linux.gnu  configure.nems.Linux.intel  configure.nems.Linux.pgi  configure.nems.Pleiades.intel  configure.nems.Pleiades.intel_gsm  configure.nems.Theia.intel  configure.nems.Theia.intel_14  configure.nems.Theia.intel_gsm  configure.nems.Theia.intel_nmmb  configure.nems.Wcoss.intel  configure.nems.Wcoss.intel_gsm  configure.nems.Wcoss.intel_nmmb  configure.nems.Yellowstone.intel  configure.nems.savoy.ifort  externals.nems.Gaea  externals.nems.Linux.gnu  externals.nems.Pleiades  externals.nems.Yellowstone
doc/: README.md
log/: .gitkeep
modulefiles/: wcoss.phase2
oldcompsets/: default.compsetRun  restart_3day_spacewx_gsm%wam%T62_ipe%80x170  swpc%20090115_1day_sbys_gsm%wam%T62  swpc%20090115_1day_sbys_gsm%wam%T62_ipe%80x170  swpc%20090115_1day_spacewx_gsm%wam%T62_ipe%80x170  (+20 more)
oldtests/: Chem_Registry.rc  (+64 more)
(+885 files in other folders)
