lib_LIBRARIES = libflip.a

include_HEADERS = ave_params.$(FC_MODEXT) minorneut.$(FC_MODEXT) solvarr.$(FC_MODEXT) field_line_grid.$(FC_MODEXT) photoionization_data.$(FC_MODEXT) thermosphere.$(FC_MODEXT) ion_den_vel.$(FC_MODEXT) production.$(FC_MODEXT)


libflip_a_SOURCES = CTIPE-int.f CMINOR.f ELECXS.f FLIP_GRID.f INIT-PROFILES.f KEMPRN.f MINORA.f Neut_Heating.f Photoel-Freqs.f RSDENA_EXB.f RSJACA.f RSLPSD.f RSLPST.f RSPE2B.f RSPRIM.f RSTEMC_EXB.f Rates.f
