lib_LIBRARIES = libmsise.a
include_HEADERS = utils_constants.$(FC_MODEXT) physics_constants.$(FC_MODEXT) utils_spline.$(FC_MODEXT) physics_msis.$(FC_MODEXT) alf.$(FC_MODEXT) hwm.$(FC_MODEXT) qwm.$(FC_MODEXT) dwm.$(FC_MODEXT) gd2qdc.$(FC_MODEXT)



libmsise_a_SOURCES = utils_constants.f90 physics_constants.f90 utils_spline.f90 physics_msis.f90 hwm14.f90

